--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "type": "git",
     "url": "git+https://github.com/webdriverio/appium-boilerplate.git"
   },
-  "dependencies": {
-	},
   "keywords": [],
   "author": "Adarsh Aravind",
   "license": "MIT",
@@ -22,14 +20,15 @@
     "@wdio/allure-reporter": "^7.19.1",
     "@wdio/appium-service": "^7.19.5",
     "@wdio/browserstack-service": "^7.19.7",
+    "@wdio/cli": "^7.19.7",
     "@wdio/jasmine-framework": "^7.19.0",
     "@wdio/local-runner": "^7.19.7",
     "@wdio/spec-reporter": "^7.19.7",
     "eslint": "7.32.0",
     "eslint-plugin-wdio": "^7.19.0",
     "grunt": "^1.4.1",
+    "husky": "^8.0.3",
     "jasmine-spec-reporter": "^7.0.0",
-    "webpack": "^5.72.0",
-    "@wdio/cli": "^7.19.7"
+    "webpack": "^5.72.0"
   }
 }
